--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrap">
         <div class="header">
-            <h1 class="logo"><a href="#">JUST쇼핑몰</h1>
+            <h1 class="logo"><a href="#">JUST쇼핑몰</a></h1>
             <ul class="gnb">
                 <li>
                     <a href="#">탑</a>
@@ -61,32 +61,33 @@
 
         <div class="contents">
             <div class="tab">
-                <section class="on">
+                <div class="tab_title">
                     <h2><a href="#">공지사항</a></h2>
+                    <h2><a href="#">갤러리</a></h2>
+                </div>
+
+                <div class="tab_contents">
                     <ul class="notice">
                         <li><a href="#">2021년 2월 무이자 할부 카드 안내 2021년 2월 무이자 할부 카드 안내</a></li>
                         <li><a href="#">쿠폰 사용안내  2021년 2월 무이자 할부 카드 안내</a></li>
                         <li><a href="#">쿠폰 다운로드 & 사용방법</a></li>
                         <li><a href="#">모바일 APP설치하고 10% 할인쿠폰 받자!  2021년 2월 무이자 할부 카드 안내</a></li>
                     </ul>
-                </section>
-                <section>
-                    <h2><a href="#">갤러리</a></h2>
                     <ul class="gallery">
                         <li><a href="#"><img src="./images/gallery1.jpg" alt="첫번째 갤러리 이미지 "></a></li>
                         <li><a href="#"><img src="./images/gallery2.jpg" alt="두번째 갤러리 이미지 "></a></li>
                         <li><a href="#"><img src="./images/gallery3.jpg" alt="세번째 갤러리 이미지"></a></li>
                     </ul>
-                </section>
+                </div>
             </div>
             <div class="banner">
-                <h2>배너</h2>
+                <h2 class="blind">배너</h2>
                 <div class="banner_img">
                     <a href="#"><img src="./images/banner.jpg" alt=""></a>
                 </div>
             </div>
             <div class="link">
-                <h2>바로가기</h2>
+                <h2 class="blind">바로가기</h2>
                 <div class="items">
                     <a href="#">나의 계정</a>
                     <a href="#">헤이 음악</a>
